syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message CreateUserRequest {
  string username = 1;
  string fullname = 2;
  string email = 3;
  string password = 4;
  int32 plan = 5;
  bool auto_renew = 6;
}

message CreateUserResponse {
  User user = 1;
}