syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message LoginRequest {
  string username = 1;
  string password = 2;
  string client_ip = 3;
  string user_agent = 4;
}

message LoginResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_expired_at = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp refresh_expired_at = 4;
  string session_id = 5;
  User user = 6;
}