syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message GetUserRequest {
  int32 ID = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserResponse {
  User user = 1;
  string password = 2;
}